# boring-bureaucracy

./: .gitignore  Cargo.toml  README.md  admin_tx.json  config.toml  create_vnet.json  execute_tx.json  sample.env  tx_0.json  tx_1.json
crates/core/: Cargo.toml  test_blocks.json  test_data.json
crates/core/src/: bytecode.rs  lib.rs  main.rs
crates/core/src/actions/: action.rs  add_asset_action.rs  admin_action.rs  bundler_meta_action.rs  deploy_contract_action.rs  meta_action.rs  mod.rs  multisend_meta_action.rs  multisend_utils.rs  multisig_meta_action.rs  remove_asset_action.rs  sender_type.rs  set_merkle_root_action.rs  set_public_capability_action.rs  set_rate_provider_data_action.rs  set_role_capability_action.rs  set_user_role_action.rs  stop_withdraws_in_asset_action.rs  timelock_action.rs  timelock_meta_action.rs  update_asset_data_action.rs  update_performance_fee_action.rs  update_platform_fee_action.rs  update_withdraw_asset_action.rs
crates/core/src/bindings/: accountant.rs  auth.rs  boring_queue.rs  boring_vault.rs  bundler.rs  deployer.rs  manager.rs  mod.rs  multisend.rs  multisig.rs  roles_authority.rs  teller.rs  timelock.rs
crates/core/src/block_manager/: block_manager.rs  example.rs  mod.rs  shared_cache.rs
crates/core/src/constants/: roles.rs
crates/core/src/processors/: asset_update.rs  mod.rs  process_strategist_roles_update.rs  roles_update.rs  root_update.rs  solver_update.rs  strategist_roles.rs  update_fees.rs  withdraw_asset_update.rs
crates/core/src/types/: config_wrapper.rs  mod.rs  simulation_config.rs  transaction.rs
(+22 files in other folders)
