[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
eyre = "0.6.12"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Async runtime
tokio = { version = "1.41.1", features = ["full"] }

# Http Requests
reqwest = { version = "0.12.12", features = ["json"] }

dotenv = "0.15.0"

alloy = { version = "0.11.1", features = [
    "sol-types",
    "contract",
    "node-bindings",
    "signer-trezor",
    "signer-ledger",
] }

# Hex handling
hex = "0.4.3"


# TOML
toml = "0.8.20"


uuid = { version = "1.15.1", features = ["v4"] }
log = "0.4.27"
